sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var fin=0
  var x=getNombreValeurs()
  while (fin!=x**2){
  var echanges = 0
  var i = 0
    var e=0
    for (e <- 0 to x){
  if (plusPetit(i,i+1)==false){
    echange(i,i+1)
    echanges = echanges + 1
  }
  else {
    i = i + 1
  }
}
    fin + = 1
    }
}
}